--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta
+  <!-- <meta
     content="Rommelo Technologiesstrives for continued improvement in provision of end-to-end solutions in Energy, Telecommunication, & ICT. Adrian has strategically positioned itself as a market leader and disruptor to ensure we define the service excellence in this period of ICT transformation that requires extensive innovation and merging of technologies."
     name="description" />
   <meta content="http://adriankenya.com//img/Security.jpg" property="og:image" />
@@ -21,7 +21,7 @@
   <meta content="Rommelo Technologies" property="og:title" />
   <meta
     content="Rommelo Technologies strives for continued improvement in provision of end-to-end solutions in Energy, Telecommunication, & ICT. Adrian has strategically positioned itself as a market leader and disruptor to ensure we define the service excellence in this period of ICT transformation that requires extensive innovation and merging of technologies." />
-  <link rel="shortcut icon" href="images/favicon-16x16.png">
+  <link rel="shortcut icon" href="images/favicon-16x16.png"> -->
 
   <!-- Bootstrap CSS -->
   <!-- Latest compiled and minified CSS -->
@@ -103,13 +103,12 @@
           <li><a href="index.html">Home</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-              aria-expanded="false">About <span class="caret"></span></a>
+              aria-expanded="false" >About <span class="caret" aria-colcount="true"></span></a>
             <ul class="dropdown-menu">
               <li><a href="index1.html">Who We Are</a></li>
               <li><a href="index3.html">Organization</a></li>
               <li><a href="index4.html">Gallery</a></li>
-              <!--                             <li><a href="downloads.php">Downloads</a></li>
- -->
+             
             </ul>
           </li>
 
