--- a/index3.html
+++ b/index3.html
@@ -13,15 +13,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta
-    content="Rommelo Technologiesstrives for continued improvement in provision of end-to-end solutions in Energy, Telecommunication, & ICT. Adrian has strategically positioned itself as a market leader and disruptor to ensure we define the service excellence in this period of ICT transformation that requires extensive innovation and merging of technologies."
-    name="description" />
-  <meta content="http://adriankenya.com//img/Security.jpg" property="og:image" />
-  <meta content="http://adriankenya.com/" property="og:url" />
-  <meta content="Rommelo Technologies" property="og:title" />
-  <meta
-    content="Rommelo Technologies strives for continued improvement in provision of end-to-end solutions in Energy, Telecommunication, & ICT. Adrian has strategically positioned itself as a market leader and disruptor to ensure we define the service excellence in this period of ICT transformation that requires extensive innovation and merging of technologies." />
-  <link rel="shortcut icon" href="images/favicon-16x16.png">
+  
 
   <!-- Bootstrap CSS -->
   <!-- Latest compiled and minified CSS -->
@@ -120,201 +112,199 @@
 
     </div>
   </header>
-    <!--
+  <!--
         End Fixed Navigation
         ==================================== -->
 
-    <style type="text/css">
-        .team-members {
-            padding: 10px 0px;
-            box-sizing: border-box;
-            color: #444;
-            background-color: #f5f5f5;
-        }
+  <style type="text/css">
+    .team-members {
+      padding: 10px 0px;
+      box-sizing: border-box;
+      color: #444;
+      background-color: #f5f5f5;
+    }
 
-        .team-members h2 {
-            padding: 30px 0 30px 0;
-            font-weight: 600;
-            font-size: 26px;
-        }
+    .team-members h2 {
+      padding: 30px 0 30px 0;
+      font-weight: 600;
+      font-size: 26px;
+    }
 
-        .team-member {
-            text-align: center;
-        }
+    .team-member {
+      text-align: center;
+    }
 
-        .team-memb-pic img {
-            height: 200px;
-            width: 200px;
-            border-radius: 100%;
-            margin: 0 auto 20px auto;
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
+    .team-memb-pic img {
+      height: 200px;
+      width: 200px;
+      border-radius: 100%;
+      margin: 0 auto 20px auto;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
 
-        .member-quote {
-            font-size: 1.2em;
-            color: #777;
-            margin-bottom: 20px;
-        }
+    .member-quote {
+      font-size: 1.2em;
+      color: #777;
+      margin-bottom: 20px;
+    }
 
-        .member-name {
-            color: #444;
-        }
+    .member-name {
+      color: #444;
+    }
 
-        .member-role {
-            color: #d22026e6;
-        }
+    .member-role {
+      color: #d22026e6;
+    }
 
-        .modal-dialog {
-            width: auto !important;
-            padding-top: 10%;
-        }
+    .modal-dialog {
+      width: auto !important;
+      padding-top: 10%;
+    }
 
-        .modalImg img {
-            object-fit: cover;
-            width: 100%;
-        }
+    .modalImg img {
+      object-fit: cover;
+      width: 100%;
+    }
 
-        .modalImg {
-            height: 360px;
-            overflow: hidden;
-            display: block;
-        }
+    .modalImg {
+      height: 360px;
+      overflow: hidden;
+      display: block;
+    }
 
-        .modal-content {
-            border-radius: 0px;
-            border-top: 5px solid red;
-        }
+    .modal-content {
+      border-radius: 0px;
+      border-top: 5px solid red;
+    }
 
-        .modal-body small {
-            font-size: 17px;
-            color: #656565;
-            font-weight: 600;
-        }
+    .modal-body small {
+      font-size: 17px;
+      color: #656565;
+      font-weight: 600;
+    }
 
-        .modal-header {
-            border-bottom: none;
-            padding-top: 0px;
-        }
+    .modal-header {
+      border-bottom: none;
+      padding-top: 0px;
+    }
 
-        .titles {
-            padding-bottom: 10px;
-            margin-bottom: 10px;
-            border-bottom: 1px solid #e8e8e8;
-        }
+    .titles {
+      padding-bottom: 10px;
+      margin-bottom: 10px;
+      border-bottom: 1px solid #e8e8e8;
+    }
 
-        .title::after {
-            top: 15px;
-            left: 50%;
-            bottom: 0;
-            position: relative;
-            width: 35px;
-            height: 2px;
-            content: "";
-            display: inherit;
-            background-color: #d22026;
-            transform: translateX(-50%);
-        }
+    .title::after {
+      top: 15px;
+      left: 50%;
+      bottom: 0;
+      position: relative;
+      width: 35px;
+      height: 2px;
+      content: "";
+      display: inherit;
+      background-color: #d22026;
+      transform: translateX(-50%);
+    }
 
-        .linkedin {
-            font-size: 40px;
-        }
-    </style>
-    <div class="page-header"
-        style="padding-top: 9%;background-image:url(images/back.jpg);color: white; min-height: 350px; margin-bottom: -1px; background-size: cover;">
-        <div class="col-sm-12">
-            <h1 class="pull-left" style="text-shadow: 3px 3px 5px #000000;">Management Team and Organization Structure
-            </h1>
-        </div>
-    </div>
-
-    <style type="text/css">
-        .redLine {
-            background: #f4f4f4;
-            padding: 30px 0 30px 0;
-            border-top: 8px #d22026 solid;
-        }
-
-        .redLine img {
-            width: 100%;
-        }
-    </style>
+    .linkedin {
+      font-size: 40px;
+    }
+  </style>
+  <div class="page-header"
+    style="padding-top: 9%;background-image:url(images/back.jpg);color: white; min-height: 350px; margin-bottom: -1px; background-size: cover;">
     <div class="col-sm-12">
-        <div class="row redLine">
-            <div class="col-sm-8 col-sm-offset-2 ">
-                <img src="images/process.png">
-            </div>
-        </div>
+      <h1 class="pull-left" style="text-shadow: 3px 3px 5px #000000;">Management Team and Organization Structure
+      </h1>
     </div>
-    <div class="col-sm-12" style="background: #fff; padding: 30px 0 30px 0;">
-        <div class="container">
-            <h2 class="text-center title" style="padding: 10px 0 30px 0;">Management Team and Organization Structure</h2>
-            <p style="font-size: 20px;">With our able team of management. We have recognized human resource as the best investment
-                to our company. This is by employing the best, continuous training and a promised future. We
-                embrace teamwork and encourage each of our staff to always stick to the laid down work ethics.
-                We have continuously offered training to our employees and providing them with modernized
-                equipment in order to meet their targets. This is in recognition of our goal to total quality
-                management. Below is our organization structure;</p>
-            <div class="col-sm-12">
-                <img src="images/sgr.png" style="width: 100%;">
-            </div>
-        </div>
-    </div>
-    
-    <footer class="footer">
-        <section class="col-sm-12 footer">
-          <div class="container">
-            <div class="text-center">
-              <h4 class="ourconts">Contact Us</h4>
-              <hr>
-              <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
-                RUARAKA.
-              </p>
-              <p>Office Tel: +254 722 343243;</p>
-              <p>REGISTRATION NUMBER: PVT/2016/008776</p>
-              <p>KRA PIN NUMBER: P051588135Z</p>
-              <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
-              <p>Email: rommelotechnologies@gmail.com</p>
-              <div>
-                <a class="smedia" href="https://www.facebook.com/" target="_blank"><i
-                    class="fab fa-facebook-square"></i></a>
-                <a class="smedia" href="https://twitter.com/"><i class="fab fa-twitter-square"
-                    target="_blank"></i></a>
-                <a class="smedia" href="https://www.instagram.com/"><i class="fab fa-instagram"
-                    target="_blank"></i></i></a>
-                <a class="smedia" href="https://www.youtube.com/"><i class="fab fa-youtube"
-                    target="_blank"></i></i></a>
-              </div>
-            </div>
-          </div>
-        </section>
-        <div class="col-sm-12 company text-center">
-          <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4">
-              <p>&copy; Copyright: 2019 | Judi Chepkemoi Inc</p>
-            </div>
-            <div class="col-md-4"></div>
-          </div>
-        </div>
-      </footer>
-      <style>
-        .footer{
-          background-color:greenyellow;
-        }
-      </style>
+  </div>
 
-   
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+  <style type="text/css">
+    .redLine {
+      background: #f4f4f4;
+      padding: 30px 0 30px 0;
+      border-top: 8px #d22026 solid;
+    }
+
+    .redLine img {
+      width: 100%;
+    }
+  </style>
+  <div class="col-sm-12">
+    <div class="row redLine">
+      <div class="col-sm-8 col-sm-offset-2 ">
+        <img src="images/process.png">
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-12" style="background: #fff; padding: 30px 0 30px 0;">
+    <div class="container">
+      <h2 class="text-center title" style="padding: 10px 0 30px 0;">Management Team and Organization Structure</h2>
+      <p style="font-size: 20px;">With our able team of management. We have recognized human resource as the best
+        investment
+        to our company. This is by employing the best, continuous training and a promised future. We
+        embrace teamwork and encourage each of our staff to always stick to the laid down work ethics.
+        We have continuously offered training to our employees and providing them with modernized
+        equipment in order to meet their targets. This is in recognition of our goal to total quality
+        management. Below is our organization structure;</p>
+      <div class="col-sm-12">
+        <img src="images/sgr.png" style="width: 100%;">
+      </div>
+    </div>
+  </div>
+
+  <footer class="footer">
+    <section class="col-sm-12 footer">
+      <div class="container">
+        <div class="text-center">
+          <h4 class="ourconts">Contact Us</h4>
+          <hr>
+          <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
+            RUARAKA.
+          </p>
+          <p>Office Tel: +254 722 343243;</p>
+          <p>REGISTRATION NUMBER: PVT/2016/008776</p>
+          <p>KRA PIN NUMBER: P051588135Z</p>
+          <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
+          <p>Email: rommelotechnologies@gmail.com</p>
+          <div>
+            <a class="smedia" href="https://www.facebook.com/" target="_blank"><i
+                class="fab fa-facebook-square"></i></a>
+            <a class="smedia" href="https://twitter.com/"><i class="fab fa-twitter-square" target="_blank"></i></a>
+            <a class="smedia" href="https://www.instagram.com/"><i class="fab fa-instagram" target="_blank"></i></i></a>
+            <a class="smedia" href="https://www.youtube.com/"><i class="fab fa-youtube" target="_blank"></i></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="col-sm-12 company text-center">
+      <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+          <p>&copy; Copyright: 2019 | Judi Chepkemoi Inc</p>
+        </div>
+        <div class="col-md-4"></div>
+      </div>
+    </div>
+  </footer>
+  <style>
+    .footer {
+      background-color: greenyellow;
+    }
+  </style>
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
 </body>
 <script src="./assets/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
 <script src="./assets/plugins/scrollmagic/ScrollMagic.min.js"></script>
